Fix mobile toolbar overlapping preview gallery

--- a/frontend/src/components/sidebar/TreeSidePane/styles.scss
+++ b/frontend/src/components/sidebar/TreeSidePane/styles.scss
@@ -77,5 +77,10 @@
 
   .phone.portrait & {
     min-height: 200px;
+
+    /**
+     * Compensate for the toolbar.
+     **/
+    padding-bottom: 40px;
   }
 }
